2002-01-09  Duncan Mak  <duncan@ximian.com>

	* ResourceManager.cs: Fixed the GetSatelliteContractVersion()
	method. It was missing a cast before. Removed MonoTODO
	attribute. ;-) It was tested by John Barn, so this shouldn't break
	the build.
	
2002-01-06  Duco Fijma <duco@lorentz.xs4all.nl>
	* Finalizing IResourceReader and IResourceWriter interfaces: 
          Added "new"-modifier to IResourceReader.GetEnumerator
	* Fixed compilation issues in other *.cs, so that the 
          System.Resources namespaces can be included in the corlib build.

2002-01-05  Ravi Pratap  <ravi@ximian.com>

	* ResourceManager.cs : MonoTODO attribute decoration.
	
Tue Dec 18 13:18:32 CET 2001 Paolo Molaro <lupus@ximian.com>

	* *.cs: fixed some of the compilation issues: missing
	using directives, typos.

2001-12-11  Duncan Mak  <duncan@ximian.com>

	* Checked in to CVS.

2001-12-10  Duncan Mak  <duncan@ximian.com>

	* ResourceManager.cs (GetNeutralResourcesLanguage):
	(GetSatelliteContractVersion): Implemented.
	
2001-12-09  Duncan Mak  <duncan@ximian.com>

	* ResXResourceReader.cs: Initial attempt.

	* ResXFileRef.cs: Initial attempt.

	* ResourceWriter.cs: Initial attempt.

	* ResourceSet.cs (ReadResources): Implemented, with help from Radek Doulik.

2001-11-28  Duncan Mak <duncan@ximian.com>	

	* ResourceManager.cs: First attempt.

2001-11-27  Duncan Mak <duncan@ximian.com>

	* ResourceSet.cs:
	First attempt, can't continue until ResourceReader and ResourceWriter are implemented.
		
	* SatelliteContractVersionAttribute.cs: First attempt. The spec is quite amibiguous here.

	* NeutralResoucesLanguageAttribute.cs: Complete.

	* MissingManifestResourceException.cs: Complete.

	* IResourceReader.cs: Complete.

	* IResourceWriter.cs: Complete.